fix: Add body style rule to override user agent stylesheet of 8px margin which affects the navbar spacing

--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,7 @@
 .home--meta_info p {
     color: $govuk-secondary-text-colour!important;
 }
+
+body {
+    margin: 0px !important;
+}
